--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="drawer_open">Drawer open</string>
     <string name="drawer_close">Drawer close</string>
     <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="irraz_ner_title">Рішення ірраціональних нерівностей</string>
+    <string name="irraz_ner_def">Нерівність, що містить змінну під знаком кореня N-го-ступеня</string>
+    <string name="isp_ravn_preobr_title">Використ. рівнос. перетв.</string>
+    <string name="isp_ravn_preobr_def">на ОДЗ вихідного</string>
+    <string name="isp_meth_intervalov_title">Використ. методу інтервалів</string>
+    <string name="isp_meth_intervalov_def">для нерівностей виду f(x) &lt;&gt; 0</string>
 </resources>
